# 100045-Secure-Repository

./: README.md
dowell-secure-github-repository/: Documentation.md  README.md  pyproject.toml
dowell-secure-github-repository/dowell_secure_github_repository/: __init__.py  dowell_secure_github_repository.py  setup.py
